# Bootcamp_aula20

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  database.py  models.py  requirements.txt  router.py  schemas.py
