[tool.poetry]
name = "aula20"
version = "0.1.0"
description = ""
authors = ["Fasri <felipear@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.3"
fastapi = "^0.115.5"
email-validator = "^2.2.0"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
